# cpp_oop_2

./: CMakeLists.txt
app/: Console_application.cc
include/class/: workers.h
src/: Employee.cc  Employees.cc
tests/: Employee_tests.cc  Employees_tests.cc
